[package]
name = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
help = "0.0.0"
humanize-duration = "0.0.6"
plotly = { version = "0.10.0", features = ["kaleido"] }
rand = "0.8.5"
serde = { "version" = "1.0.210", features = ["derive"] }
